Fixed images being too big in articles and added search modal

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -114,35 +114,6 @@
 	color: black;
 }
 
-.header-search
-{
-	height: 55px;
-	
-	&.hidden
-	{
-		.search-field
-		{
-			@include transition(.4s ease-in-out);
-			visibility: hidden;
-			width: 0px;
-		}
-	}
-	
-	.search-field
-	{
-		border: none;
-		@include border-radius(30px);
-		height: 24px;
-		@include transition(width 0.4s ease-in-out);
-		margin-left: 25px;
-		margin-top: 15px;
-		outline: none;
-		padding-left: 10px;
-		visibility: hidden;
-		width: 250px;
-	}
-}
-
 .header-hamburger-icon
 {
 	cursor: pointer;
