--- a/scss/_single.scss
+++ b/scss/_single.scss
@@ -52,6 +52,7 @@
 
 .single-content
 {
+	overflow: hidden;
 	width: 100%;
 	
 	p,
@@ -81,8 +82,7 @@
 		margin-left: 0px;
 		margin-right: 0px;
 		margin-bottom: 15px;
-		//max-width: 900px;
-		width: 100%;
+		width: 100% !important; // Must be !important to override WordPress sizing
 		
 		img
 		{
